--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,13 @@
             <artifactId>antlr</artifactId>
             <version>2.7.7</version>
         </dependency>
+
+        <!-- Gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
 
     <build>
