--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,13 @@
             <artifactId>javax.mail</artifactId>
             <version>1.6.2</version>
         </dependency>
+
+        <!-- useragent -->
+        <dependency>
+            <groupId>nl.basjes.parse.useragent</groupId>
+            <artifactId>yauaa</artifactId>
+            <version>5.8</version>
+        </dependency>
     </dependencies>
 
     <build>
