--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,19 @@
             <artifactId>yauaa</artifactId>
             <version>5.8</version>
         </dependency>
+
+        <!-- fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency>
+        <!-- kudu -->
+        <dependency>
+            <groupId>org.apache.kudu</groupId>
+            <artifactId>kudu-client</artifactId>
+            <version>1.5.0-cdh5.13.1</version>
+        </dependency>
     </dependencies>
 
     <build>
